load("//bzl:rules.bzl",
     "bootstrap_archive",
     "bootstrap_executable",
     "bootstrap_module",
)

exports_files(["Makefile.config", "VERSION"])

## this package is for the compiler build targets defined in the root
## Makefile:

## ocamlc, ocamlopt, ocaml
## ocamlc.opt, ocamlopt.opt

## we put other makefile targets in their respective directories:
## ocamllex, ocamllex.opt
## ocamlyacc, ocamlyacc.opt

## toplevel stuff, targets in //topdirs
## ocamlnat

## ocamldoc, ocamldoc.opt
## ocamltest, ocamltest.opt
## ocamldebugger
## ocamltools: various targets in //tools

## sak (runtime system for bc compiler; build tgt:  //runtime:sak.exe

## other tools:
## expunge

##############################
####  Executable Targets  ####
MAIN_OPTS = [
    "-principal",
    "-nostdlib",
]

MAIN_DEPS = [
    ##"#UNRESOLVED 3: #f: runtime",
    # "//./stdlib:stdlib",
    # "//.:ocamlbytecomp",
    # "//.:ocamlcommon",
]

###############################################
########### Archive/Library Targets ###########

## root Makefile:

# bytecode compiled, emits bytecode (OBazl default mode "bc_bc")
# ocamlc$(EXE): compilerlibs/ocamlcommon.cma \
#               compilerlibs/ocamlbytecomp.cma $(BYTESTART)
# 	$(CAMLC) $(LINKFLAGS) -compat-32 -o $@ $^
bootstrap_executable(
    name = "ocamlc",
    opts = ["-compat-32"],
    deps = [
        "//compilerlibs:ocamlcommon",
        "//bytecomp:ocamlbytecomp"
    ]
)

# native compiled, emits bytecode (Obazl mode "n_bc"_)
################
# ocamlc.opt$(EXE): compilerlibs/ocamlcommon.cmxa \
#                   compilerlibs/ocamlbytecomp.cmxa $(BYTESTART:.cmo=.cmx)
# 	$(CAMLOPT_CMD) $(LINKFLAGS) -o $@ $^ -cclib "$(BYTECCLIBS)"
# bootstrap_executable(
#     name = "ocamlc.opt",
#     opts = ["-compat-32"],
#     deps = [
#         "//compilerlibs:ocamlcommon",
#         "//compilerlibs:ocamloptcomp"
#     ]
# )

# bytecode compiler, emits native code (Obazl mode "bc_n")
# OPTSTART=driver/optmain.cmo
# ocamlopt$(EXE): compilerlibs/ocamlcommon.cma compilerlibs/ocamloptcomp.cma \
#           $(OPTSTART)
# 	$(CAMLC) $(LINKFLAGS) -o $@ $^
bootstrap_executable(
    name = "ocamlopt",
    opts = [],
    deps = [
        "//compilerlibs:ocamlcommon",
        "//compilerlibs:ocamloptcomp",
        # "//stdlib",
        "//driver:Optmain"
    ]
)

# native compiled, emits native code (OBazl mode "n_n")
# ocamlopt.opt$(EXE): \
#                     compilerlibs/ocamlcommon.cmxa \
#                     compilerlibs/ocamloptcomp.cmxa \
#                     $(OPTSTART:.cmo=.cmx)
# 	$(CAMLOPT_CMD) $(LINKFLAGS) -o $@ $^
