load("//vendor/mustach:BUILD_RULES.bzl", "mustache")
load("//bzl:rules.bzl",
     "boot_library",
     "compiler_module",
     "tool_module",
     "tool_signature",
     "ocaml_tool"
)
load("//bzl/rules:ns_rules.bzl", "ns_module", "ns_signature")

load("//lex:BUILD_RULES.bzl", "lex")


MODULE_OPTS = []
SIG_OPTS    = []


ocaml_tool(
    name = "ocamldebug",
    prologue = [
        "//compilerlibs:ocamlcommon",
        "//otherlibs/unix:unix_lib",
        "//otherlibs/dynlink",
        "//toplevel:Genprintval",
        "//toplevel:Topprinters",
        ":debugger_lib",
    ],
    cc_deps = ["//otherlibs/unix"],
    main = ":Ocamldebug.Ocamldebug_entry",
    opts = select({
        "//config/target/executor:boot_executor?": ["-custom"],
        "//config/target/executor:vm_executor?": ["-custom"],
        "//conditions:default": [],
    }) + [
        "-linkall", "-g",
        # "-no-alias-deps",
        "-verbose"
    ],
    cc_linkopts = select({
        "@platforms//os:macos": [ ## FIXME: default tc, not zig
            # "-Wl,-v", # prints config, search paths
            # "-Wl,-print_statistics", # -Wl,-v plus timings, mem, etc.
            # "-t", # -Wl-v plus logs each file the linker loads.
            # "-why_load" # Log why each object file in a static library
            #             # is loaded. That is, what symbol was needed.
            ## zig linker opts
            # "-v",
            ],
        "@platforms//os:linux": [
            # "-Wl,--verbose"
            ##FIXME: depends on linker used (bfd, gold, etc.)
        ]
    }),
)

## resolver
## NB: aliases one sig w/o struct: Parser_aux
tool_module(
    name   = "Ocamldebug",
    opts = MODULE_OPTS + [
        "-no-alias-deps",
        "-w", "-49",
        "-nopervasives"
    ],
    struct = "ocamldebug.ml",
)

mustache(
    name = "ocamldebug_ml",
    out  = "ocamldebug.ml",
    json = "ocamldebug.json",
    template = "ocamldebug.ml.mustache",
)

boot_library(
    name = "debugger_lib",  ## includes resolver Ocamldebug
    manifest  = [
        ":Ocamldebug",
        ":Ocamldebug.Breakpoints",
        ":Ocamldebug.Checkpoints",
        ":Ocamldebug.Command_line",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Debugger_lexer",
        ":Ocamldebug.Debugger_parser",
        ":Ocamldebug.Eval",
        ":Ocamldebug.Events",
        ":Ocamldebug.Exec",
        ":Ocamldebug.Frames",
        ":Ocamldebug.History",
        ":Ocamldebug.Input_handling",
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Loadprinter",
        ":Ocamldebug.Main",
        # ":Ocamldebug_entry",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Pos",
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Printval",
        ":Ocamldebug.Program_loading",
        ":Ocamldebug.Program_management",
        ":Ocamldebug.Question",
        ":Ocamldebug.Show_information",
        ":Ocamldebug.Show_source",
        ":Ocamldebug.Source",
        ":Ocamldebug.Symbols",
        ":Ocamldebug.Time_travel",
        ":Ocamldebug.Trap_barrier",
        ":Ocamldebug.Unix_tools",
    ],
)

ns_module(
    name   = "Ocamldebug.Breakpoints",
    ns     = ":Ocamldebug",
    struct = "breakpoints.ml",
    sig    = ":Ocamldebug.Breakpoints_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Symbols",
        ":Ocamldebug.Pos",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Exec",
        ":Ocamldebug.Events",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Checkpoints",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int",
        "//bytecomp:Instruct",
        "//stdlib:Stdlib.Fun",
    ]
)

ns_signature(
    name = "Ocamldebug.Breakpoints_cmi",
    ns     = ":Ocamldebug",
    src  = "breakpoints.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Events_cmi",
        ":Ocamldebug.Debugcom_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Checkpoints",
    ns     = ":Ocamldebug",
    struct = "checkpoints.ml",
    sig    = ":Ocamldebug.Checkpoints_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Debugcom",
        "//stdlib:Stdlib.Option",
    ]
)

ns_signature(
    name = "Ocamldebug.Checkpoints_cmi",
    ns     = ":Ocamldebug",
    src  = "checkpoints.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Primitives_cmi",
        ":Ocamldebug.Debugcom_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Command_line",
    ns     = ":Ocamldebug",
    struct = "command_line.ml",
    sig    = ":Ocamldebug.Command_line_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//bytecomp:Instruct",
        "//parsing:Location",
        "//parsing:Longident",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Fun",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Sys",
        "//typing:Env",
        "//typing:Types",
        "//utils:Load_path",
        ":Ocamldebug.Breakpoints",
        ":Ocamldebug.Checkpoints",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Debugger_lexer",
        ":Ocamldebug.Debugger_parser",
        ":Ocamldebug.Eval",
        ":Ocamldebug.Events",
        ":Ocamldebug.Frames",
        ":Ocamldebug.History",
        ":Ocamldebug.Input_handling",
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Loadprinter",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Pos",
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Printval",
        ":Ocamldebug.Program_loading",
        ":Ocamldebug.Program_management",
        ":Ocamldebug.Question",
        ":Ocamldebug.Show_information",
        ":Ocamldebug.Show_source",
        ":Ocamldebug.Source",
        ":Ocamldebug.Symbols",
        ":Ocamldebug.Time_travel",
        ":Ocamldebug.Unix_tools",
    ]
)

ns_signature(
    name = "Ocamldebug.Command_line_cmi",
    ns     = ":Ocamldebug",
    src  = "command_line.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lexing_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Debugcom",
    ns     = ":Ocamldebug",
    struct = "debugcom.ml",
    sig    = ":Ocamldebug.Debugcom_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Input_handling",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Obj",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int64",
        "//bytecomp:Instruct",
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Array",
    ]
)

ns_signature(
    name = "Ocamldebug.Debugcom_cmi",
    ns     = ":Ocamldebug",
    src  = "debugcom.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Primitives_cmi",
        "//bytecomp:Instruct_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Debugger_config",
    ns     = ":Ocamldebug",
    struct = "debugger_config.ml",
    sig    = ":Ocamldebug.Debugger_config_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Int64ops",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.Hashtbl",
    ]
)

ns_signature(
    name = "Ocamldebug.Debugger_config_cmi",
    ns     = ":Ocamldebug",
    src  = "debugger_config.mli",
    stdlib_primitives = True,
    deps   = [
        "//stdlib:Stdlib.Hashtbl_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Debugger_lexer",
    ns     = ":Ocamldebug",
    struct = "debugger_lexer.ml",
    sig    = ":Ocamldebug.Debugger_lexer_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Parsing",
    ]
)

lex(
    name = "Ocamldebug.debugger_lexer_ml",
    src  = "debugger_lexer.mll",
    out  = "debugger_lexer.ml",
)

ns_signature(
    name = "Ocamldebug.Debugger_lexer_cmi",
    ns     = ":Ocamldebug",
    src  = "debugger_lexer.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lexing_cmi",
        ":Ocamldebug.Debugger_parser_cmi"
    ]
)

ns_module(
    name   = "Ocamldebug.Debugger_parser",
    ns     = ":Ocamldebug",
    struct = "debugger_parser.ml",
    sig    = ":Ocamldebug.Debugger_parser_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Input_handling",
        "//stdlib:Stdlib.Parsing"
    ]
)

ns_signature(
    name = "Ocamldebug.Debugger_parser_cmi",
    ns     = ":Ocamldebug",
    src  = "debugger_parser.mli",
    stdlib_primitives = True,
    deps   = [
        ":Ocamldebug.Parser_aux_cmi",
        "//stdlib:Stdlib.Lexing_cmi"
    ]
)

genrule(
    name = "Ocamldebug.debugger_parser_ml",
    outs = ["debugger_parser.ml", "debugger_parser.mli"],
    srcs = ["debugger_parser.mly",
            "//yacc:ocamlyacc"
            ],
    # tools = ["//yacc:ocamlyacc"],
    cmd   = " ".join([
        # "echo PWD: $$PWD;",
        "$(execpath //yacc:ocamlyacc)",
        "--strict", "-v",
        "$(location debugger_parser.mly) > /dev/null;",
        # "echo `ls -la lex`;",
        "cp debugger/debugger_parser.ml $(RULEDIR)/;",
        "cp debugger/debugger_parser.mli $(RULEDIR)/;"
    ])
)

ns_module(
    name   = "Ocamldebug.Eval",
    ns     = ":Ocamldebug",
    struct = "eval.ml",
    sig    = ":Ocamldebug.Eval_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//bytecomp:Instruct",
        "//bytecomp:Symtable",
        "//parsing:Longident",
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.String",
        "//typing:Btype",
        "//typing:Ctype",
        "//typing:Env",
        "//typing:Ident",
        "//typing:Path",
        "//typing:Predef",
        "//typing:Printtyp",
        "//typing:Types",
        "//utils:Misc",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Events",
        ":Ocamldebug.Frames",
        ":Ocamldebug.Printval",
        ## (Subst)

        ":Ocamldebug.Parser_aux_cmi",
    ]
)

ns_signature(
    name = "Ocamldebug.Eval_cmi",
    ns     = ":Ocamldebug",
    src  = "eval.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Longident_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//typing:Env_cmi",
        "//typing:Ident_cmi",
        "//typing:Path_cmi",
        "//typing:Types_cmi",
        ":Ocamldebug.Debugcom_cmi",
        ":Ocamldebug.Events_cmi",
        ":Ocamldebug.Parser_aux_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Events",
    ns     = ":Ocamldebug",
    struct = "events.ml",
    sig    = ":Ocamldebug.Events_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//parsing:Location",
        "//bytecomp:Instruct",
    ]
)

ns_signature(
    name = "Ocamldebug.Events_cmi",
    ns     = ":Ocamldebug",
    src  = "events.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lexing_cmi",
        "//bytecomp:Instruct_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Exec",
    ns     = ":Ocamldebug",
    struct = "exec.ml",
    sig    = ":Ocamldebug.Exec_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Sys",
    ]
)

ns_signature(
    name = "Ocamldebug.Exec_cmi",
    ns     = ":Ocamldebug",
    src  = "exec.mli",
    opts = ["-nopervasives"]
)

ns_module(
    name   = "Ocamldebug.Frames",
    ns     = ":Ocamldebug",
    struct = "frames.ml",
    sig    = ":Ocamldebug.Frames_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Symbols",
        ":Ocamldebug.Events",
        ":Ocamldebug.Debugcom",
        "//utils:Misc",
        "//stdlib:Stdlib.Lexing",
        "//bytecomp:Instruct",
    ]
)

ns_signature(
    name = "Ocamldebug.Frames_cmi",
    ns     = ":Ocamldebug",
    src  = "frames.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Events_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.History",
    ns     = ":Ocamldebug",
    struct = "history.ml",
    sig    = ":Ocamldebug.History_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Checkpoints",
        "//stdlib:Stdlib.List",
    ]
)

ns_signature(
    name = "Ocamldebug.History_cmi",
    ns     = ":Ocamldebug",
    src  = "history.mli",
    opts = ["-nopervasives"]
)

ns_module(
    name   = "Ocamldebug.Input_handling",
    ns     = ":Ocamldebug",
    struct = "input_handling.ml",
    sig    = ":Ocamldebug.Input_handling_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Parameters",
        ## (Unix)
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Fun",
    ]
)

ns_signature(
    name = "Ocamldebug.Input_handling_cmi",
    ns     = ":Ocamldebug",
    src  = "input_handling.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Primitives_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Int64ops",
    ns     = ":Ocamldebug",
    struct = "int64ops.ml",
    sig    = ":Ocamldebug.Int64ops_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Int64",
    ]
)

ns_signature(
    name = "Ocamldebug.Int64ops_cmi",
    ns     = ":Ocamldebug",
    src  = "int64ops.mli",
    opts = SIG_OPTS,
    stdlib_primitives = True,
)

ns_module(
    name   = "Ocamldebug.Loadprinter",
    ns     = ":Ocamldebug",
    struct = "loadprinter.ml",
    sig    = ":Ocamldebug.Loadprinter_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//bytecomp:Symtable",
        "//parsing:Longident",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Obj",
        "//stdlib:Stdlib.String",
        "//toplevel:Topprinters",
        "//typing:Ctype",
        "//typing:Env",
        "//typing:Ident",
        "//typing:Path",
        "//typing:Printtyp",
        "//typing:Types",
        "//utils:Load_path",
        "//utils:Misc",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Printval",
        ## (Dynlink)
    ]
)

ns_signature(
    name = "Ocamldebug.Loadprinter_cmi",
    ns   = ":Ocamldebug",
    src  = "loadprinter.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Longident_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//otherlibs/dynlink:Dynlink_cmi"
    ]
)

ns_module(
    name   = "Ocamldebug.Main",
    ns     = ":Ocamldebug",
    struct = "main.ml",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Unix_tools",
        ":Ocamldebug.Time_travel",
        ":Ocamldebug.Show_information",
        ":Ocamldebug.Question",
        ":Ocamldebug.Program_management",
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Loadprinter",
        ":Ocamldebug.Input_handling",
        ":Ocamldebug.Frames",
        ":Ocamldebug.Exec",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Command_line",
        ":Ocamldebug.Checkpoints",
        ## (Unix)
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//typing:Persistent_env",
        "//utils:Misc",
        "//utils:Load_path",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//config:Config",
        "//file_formats:Cmi_format",
        "//utils:Clflags",
        ## (Callback)
        "//stdlib:Stdlib.Buffer",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Arg",
    ]
)

ns_module(
    name   = "Ocamldebug.Ocamldebug_entry",
    ns     = ":Ocamldebug",
    struct = "ocamldebug_entry.ml",
    opts = ["-nopervasives"],
    deps   = [
        "//otherlibs/unix:Unix",
        ":Ocamldebug.Main"
    ]
)

ns_module(
    name   = "Ocamldebug.Parameters",
    ns     = ":Ocamldebug",
    struct = "parameters.ml",
    sig    = ":Ocamldebug.Parameters_cmi",
    opts = MODULE_OPTS,
    stdlib_primitives = True,
    deps   = [
        ":Ocamldebug.Debugger_config",
        "//utils:Load_path",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Filename",
        "//typing:Envaux",
        "//config:Config",
    ]
)

ns_signature(
    name = "Ocamldebug.Parameters_cmi",
    ns     = ":Ocamldebug",
    src  = "parameters.mli",
    opts = SIG_OPTS,
    stdlib_primitives = True,
)

ns_signature(
    name = "Ocamldebug.Parser_aux_cmi",
    ns     = ":Ocamldebug",
    src  = "parser_aux.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Debugcom_cmi",
        "//parsing:Longident_cmi",
    ]
)

# ns_module(
#     name   = "Ocamldebug.Pattern_matching",
#     struct = "pattern_matching.ml",
#     sig    = ":Ocamldebug.Pattern_matching_cmi",
#     opts = MODULE_OPTS,
#     deps   = [
#         "//stdlib:Stdlib.List",
#         # "//typing:Ctype",
#         "//utils:Misc",
#         ":Ocamldebug.Debugcom",
#         ":Ocamldebug.Debugger_config",
#         # "//typing:Typedtree",

#         ":Ocamldebug.Parser_aux_cmi",
#     ]
# )

# ns_signature(
#     name = "Ocamldebug.Pattern_matching_cmi",
#     src  = "pattern_matching.mli",
#     opts = SIG_OPTS,
#     deps   = [
#         ":Ocamldebug.Parser_aux_cmi",
#         ":Ocamldebug.Debugcom_cmi",
#         "//typing:Typedtree_cmi",
#     ]
# )

ns_module(
    name   = "Ocamldebug.Pos",
    ns     = ":Ocamldebug",
    struct = "pos.ml",
    sig    = ":Ocamldebug.Pos_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Events",
        "//stdlib:Stdlib.Printf",
        "//parsing:Location",
        "//stdlib:Stdlib.Lexing",
        "//bytecomp:Instruct",
    ]
)

ns_signature(
    name = "Ocamldebug.Pos_cmi",
    ns     = ":Ocamldebug",
    src  = "pos.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Events_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Primitives",
    ns     = ":Ocamldebug",
    struct = "primitives.ml",
    sig    = ":Ocamldebug.Primitives_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ## (Unix)
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printexc",
    ]
)

ns_signature(
    name = "Ocamldebug.Primitives_cmi",
    ns     = ":Ocamldebug",
    src  = "primitives.mli",
    opts = SIG_OPTS,
    stdlib_primitives = True,
    deps   = [
        "//otherlibs/unix:Unix_cmi"
    ]
)

ns_module(
    name   = "Ocamldebug.Printval",
    ns     = ":Ocamldebug",
    struct = "printval.ml",
    sig    = ":Ocamldebug.Printval_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//bytecomp:Symtable",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Obj",
        "//toplevel:Genprintval",
        "//typing:Env",
        "//typing:Oprint",
        "//typing:Printtyp",
        "//typing:Types",
        ":Ocamldebug.Debugcom",

        "//typing:Outcometree_cmi",
        ":Ocamldebug.Parser_aux_cmi",
    ]
)

ns_signature(
    name = "Ocamldebug.Printval_cmi",
    ns     = ":Ocamldebug",
    src  = "printval.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Parser_aux_cmi",
        ":Ocamldebug.Debugcom_cmi",
        "//typing:Types_cmi",
        "//typing:Path_cmi",
        "//stdlib:Stdlib.Obj_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//typing:Env_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Program_loading",
    ns     = ":Ocamldebug",
    struct = "program_loading.ml",
    sig    = ":Ocamldebug.Program_loading_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Unix_tools",
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Input_handling",
        ":Ocamldebug.Debugger_config",
        ## (Unix)
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Buffer",
    ]
)

ns_signature(
    name = "Ocamldebug.Program_loading_cmi",
    ns     = ":Ocamldebug",
    src  = "program_loading.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Primitives_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Program_management",
    ns     = ":Ocamldebug",
    struct = "program_management.ml",
    sig    = ":Ocamldebug.Program_management_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Unix_tools",
        ":Ocamldebug.Time_travel",
        ":Ocamldebug.Symbols",
        ":Ocamldebug.Question",
        ":Ocamldebug.Program_loading",
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Input_handling",
        ":Ocamldebug.History",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Breakpoints",
        "//driver:Compmisc",
        ## (Unix)
        "//stdlib:Stdlib.Printf",
        "//utils:Load_path",
        ## (Envaux)
        "//stdlib:Stdlib.Bytes",
    ]
)

ns_signature(
    name = "Ocamldebug.Program_management_cmi",
    ns     = ":Ocamldebug",
    src  = "program_management.mli",
    stdlib_primitives = True
)

ns_module(
    name   = "Ocamldebug.Question",
    ns     = ":Ocamldebug",
    struct = "question.ml",
    sig    = ":Ocamldebug.Question_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Input_handling",
        ":Ocamldebug.Debugger_lexer",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.Fun",
    ]
)

ns_signature(
    name = "Ocamldebug.Question_cmi",
    ns     = ":Ocamldebug",
    src  = "question.mli",
    opts = SIG_OPTS + ["-nopervasives"]
)

ns_module(
    name   = "Ocamldebug.Show_information",
    ns     = ":Ocamldebug",
    struct = "show_information.ml",
    sig    = ":Ocamldebug.Show_information_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Symbols",
        ":Ocamldebug.Source",
        ":Ocamldebug.Show_source",
        ":Ocamldebug.Printval",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Frames",
        ":Ocamldebug.Events",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Checkpoints",
        ":Ocamldebug.Breakpoints",
        "//stdlib:Stdlib.String",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//bytecomp:Instruct",
        "//stdlib:Stdlib.Format",
    ]
)

ns_signature(
    name = "Ocamldebug.Show_information_cmi",
    ns     = ":Ocamldebug",
    src  = "show_information.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Events_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Show_source",
    ns     = ":Ocamldebug",
    struct = "show_source.ml",
    sig    = ":Ocamldebug.Show_source_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Source",
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Parameters",
        ":Ocamldebug.Events",
        ":Ocamldebug.Debugger_config",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Printf",
        "//parsing:Location",
        "//stdlib:Stdlib.Lexing",
        "//bytecomp:Instruct",
    ]
)

ns_signature(
    name = "Ocamldebug.Show_source_cmi",
    ns     = ":Ocamldebug",
    src  = "show_source.mli",
    deps   = [
        "//stdlib:Stdlib.Lexing_cmi",
        "//bytecomp:Instruct_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Source",
    ns     = ":Ocamldebug",
    struct = "source.ml",
    sig    = ":Ocamldebug.Source_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Debugger_config",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//utils:Misc",
        "//utils:Load_path",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Filename",
    ]
)

ns_signature(
    name = "Ocamldebug.Source_cmi",
    ns     = ":Ocamldebug",
    src  = "source.mli",
    stdlib_primitives = True,
    deps   = [
        "//stdlib:Stdlib.Lexing_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Symbols",
    ns     = ":Ocamldebug",
    struct = "symbols.ml",
    sig    = ":Ocamldebug.Symbols_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//bytecomp:Bytesections",
        "//bytecomp:Instruct",
        "//bytecomp:Symtable",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//utils:Misc",
        ":Ocamldebug.Checkpoints",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Events",
        ":Ocamldebug.Program_loading",
    ]
)

ns_signature(
    name = "Ocamldebug.Symbols_cmi",
    ns     = ":Ocamldebug",
    src  = "symbols.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Events_cmi",
        ":Ocamldebug.Debugcom_cmi",
        "//bytecomp:Instruct_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Time_travel",
    ns     = ":Ocamldebug",
    struct = "time_travel.ml",
    sig    = ":Ocamldebug.Time_travel_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Trap_barrier",
        ":Ocamldebug.Symbols",
        ":Ocamldebug.Question",
        ":Ocamldebug.Program_loading",
        ":Ocamldebug.Primitives",
        ":Ocamldebug.Int64ops",
        ":Ocamldebug.Input_handling",
        ":Ocamldebug.Exec",
        ":Ocamldebug.Events",
        ":Ocamldebug.Debugger_config",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Checkpoints",
        ":Ocamldebug.Breakpoints",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.Int",
        "//bytecomp:Instruct",
        "//stdlib:Stdlib.Array",
    ]
)

ns_signature(
    name = "Ocamldebug.Time_travel_cmi",
    ns     = ":Ocamldebug",
    src  = "time_travel.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Ocamldebug.Primitives_cmi",
    ]
)

ns_module(
    name   = "Ocamldebug.Trap_barrier",
    ns     = ":Ocamldebug",
    struct = "trap_barrier.ml",
    sig    = ":Ocamldebug.Trap_barrier_cmi",
    opts = MODULE_OPTS,
    deps   = [
        ":Ocamldebug.Exec",
        ":Ocamldebug.Debugcom",
        ":Ocamldebug.Checkpoints",
        "//stdlib:Stdlib.Fun",
    ]
)

ns_signature(
    name = "Ocamldebug.Trap_barrier_cmi",
    ns     = ":Ocamldebug",
    src  = "trap_barrier.mli",
    opts = ["-nopervasives"],
    deps = [":Ocamldebug.Debugcom_cmi"]
)

ns_module(
    name   = "Ocamldebug.Unix_tools",
    ns     = ":Ocamldebug",
    struct = "unix_tools.ml",
    sig    = ":Ocamldebug.Unix_tools_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//otherlibs/unix:Unix",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Sys",
        "//utils:Misc",
    ]
)

ns_signature(
    name = "Ocamldebug.Unix_tools_cmi",
    ns     = ":Ocamldebug",
    src  = "unix_tools.mli",
    opts = SIG_OPTS + ["-nopervasives"],
    deps   = [
        "//otherlibs/unix:Unix_cmi"
    ]
)

